# driver-assistant

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release-image.yml
app/: admin_panel.html  main.py
app/api/: deps.py  router.py
app/api/v1/: admin.py  auth.py  balance.py  dashboard.py  debts.py  feed.py  ml.py  notifications.py  recommendations.py  schemas.py  trips.py  users.py  vehicles.py
app/core/: config.py  database.py  exceptions.py  security.py  store.py
app/db/: models.py
app/modules/auth/: dependencies.py  jwt.py  otp.py  schemas.py  service.py
app/modules/billing/: models.py  repository.py  service.py
app/modules/dashboard/: service.py
app/modules/feed/: service.py
app/modules/forecasting/: service.py
app/modules/ml/: clustering.py  features.py  loader.py  recommendations.py  schemas.py  service.py  spending.py
app/modules/notifications/: models.py  repository.py  rules.py  scheduler.py  service.py
app/modules/recommendations/: models.py  repository.py  service.py
app/modules/trips/: models.py  repository.py  service.py
app/modules/users/: models.py  repository.py  schemas.py  service.py
app/modules/vehicles/: models.py  repository.py  schemas.py  service.py
ml_models/: README.md  ctr_model.cbm  kmeans_model.joblib  metadata.json  scaler.joblib  spend_predictor.cbm
tests/: conftest.py  test_admin_control_room.py  test_ml_integration.py  test_mvp_smoke.py  test_notifications_recommendations.py  test_sentry_config.py
(+4 files in other folders)
